WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
280549
[Shrink-to-fit] Incorrect inline size with max-width: min-content child
https://bugs.webkit.org/show_bug.cgi?id=280549
Summary
[Shrink-to-fit] Incorrect inline size with max-width: min-content child
Sammy Gill
Reported
2024-09-27 16:01:13 PDT
rdar://136520853
Attachments
Testcase
(459 bytes, text/html)
2024-09-28 09:45 PDT
,
Sammy Gill
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2024-09-27 19:00:14 PDT
is this specific to floats? I would think any shrink-to-fit sizing fails here.
Sammy Gill
Comment 2
2024-09-28 09:45:19 PDT
Created
attachment 472720
[details]
Testcase
Sammy Gill
Comment 3
2024-09-28 09:46:52 PDT
Yeah it applies to shrink-to-fit-sizing in general. I was trying to give a description in terms of the test case I was working on (attached now). The commit and its message will probably not be specific to floats.
Sammy Gill
Comment 4
2024-10-23 17:12:26 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/34322
EWS
Comment 5
2024-11-01 23:55:11 PDT
Committed
286051@main
(93eee6b40662): <
https://commits.webkit.org/286051@main
> Reviewed commits have been landed. Closing PR #34322 and removing active labels.
Sammy Gill
Comment 6
2024-11-04 16:21:20 PST
Submitted web-platform-tests pull request:
https://github.com/web-platform-tests/wpt/pull/48963
EWS
Comment 7
2024-11-08 12:21:50 PST
Committed
283286.463@safari-7620-branch
(f15042d2eac9): <
https://commits.webkit.org/283286.463@safari-7620-branch
> Reviewed commits have been landed. Closing PR #2244 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug