[Shrink-to-Fit] shrink-to-fit sizing should consider max-inline-size: min-content. https://bugs.webkit.org/show_bug.cgi?id=280549 rdar://136520853

Reviewed by NOBODY (OOPS!).

Currently, when we compute the preferred logical widths of a renderer, we will consider
the min/max logical width properties if they are fixed values. We should, however, be
able to handle any other values for these properties, and in this patch, we extend support
for min-content of the max logical width.

To accomplish this, I shuffled around some of the logic that was trying to compute the used
min/max logical widths at the top of the method. This should not be a functional change since
these computations don't rely on the values we have so far computed for m_min/maxPreferredLogicalWidth.

In the logic for computing the used max logical width, we now consider max-width: min-content:

- If the m_min/maxPreferredLogicalWidths computed from the style's logical width value, then
we compute the intrinsic logical widths of the renderer. This appears to happen when the
computed logical width is a fixed and positive value in most cases. RenderBlock has some
additional constraints in order to determine this, but I factored out this logic into a
separate method.

- Otherwise, m_min/maxPreferredLogicalWidths should hold the intrinsic values, so we can just
use the already computed value in m_minPreferredLogicalWidth.

(Also, a quick change of argument names in computePreferredLogicalWidths in the declaration
to match the ones used in the definition.)

* LayoutTests/imported/w3c/web-platform-tests/css/css-sizing/shrink-to-fit-sizing-max-width-min-content-expected.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-sizing/shrink-to-fit-sizing-max-width-min-content.html: Added.
* Source/WebCore/rendering/RenderBox.cpp:
(WebCore::RenderBox::shouldComputePreferredLogicalWidthsFromStyle const):
(WebCore::RenderBox::computePreferredLogicalWidths):
* Source/WebCore/rendering/RenderBox.h: